style.css
body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    font-family: system-ui;
}

#calculator {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: column;
    background-color: rgb(156, 180, 206);
    padding: 12px;
    height: 600px;
    width: 450px;
    border-radius: 30px;
    box-shadow: 0 0 30px 0px rgb(159, 159, 159);
}

#display {
    background-color: rgb(238, 245, 248);
    border-radius: 1rem;
    height: 20%;
    width: auto;
    margin: 12px;
    box-sizing: content-box;
/* 
    border: solid 1px red; */
}

#buttons {
    display: flex;
    flex-direction: column;
    height: 85%;
    width: 100%;
/* 
    border: solid 1px red; */
}

.row {
    display: flex;
    height: 25%;
/*     
    border: solid 1px red; */
}

.Number, .Operator {
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1 0 auto;
    font-size: xx-large;
    margin: 12px;
    border-radius: 1rem;
    background-color: rgb(190, 212, 224);
}

.Operator {
    background-color: rgb(181, 234, 208);
}

